# rustwasm-web-canavs-game

./: Cargo.toml  LICENSE  README.md  build.sh
src/: event.rs  game.rs  lib.rs  render.rs  shared.rs  vector2.rs
web/: index.html  rustwasm_web_canavs_game.d.ts  rustwasm_web_canavs_game.js  rustwasm_web_canavs_game_bg.wasm  rustwasm_web_canavs_game_bg.wasm.d.ts
