[package]
name = "rustwasm-web-canavs-game"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.104"

[dependencies.web-sys]
version = "0.3.81"
features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MouseEvent"
]

[lib]
crate-type = ["cdylib"]
