[package]
name = "rustwasm-web-canavs-game"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
js-sys = "0.3.81"
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.9.2"

[dependencies.web-sys]
version = "0.3.81"
features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MouseEvent",
    "DocumentTimeline",
    "HtmlImageElement",
    "Performance",
    "PointerEvent",
    "MouseEvent"
]

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
target = "wasm32-unknown-unknown"

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
